# Simulation

./: CMakeLists.txt  package.xml
config/: control.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
launch/: robot_1.launch.xml
log/: latest_build  latest_list
robot_1_description/: controller.py
urdf/: robot_1.urdf.xacro
